# ToolHub

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TOOLHUB.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
config/: cli_policy.json
dashboard/: streamlit_app.py
docs/: architecture.md  code_review_fix_plan.md  database_schema.md  resume_and_interview.md  toolhub_agent_harness_final_development_plan.md  toolhub_improvement_plan.md
evals/: routing_eval_report.md  tool_routing_cases.jsonl
migrations/: env.py
scripts/: demo_flow.ps1  eval_tool_routing.py  final_demo.ps1  import_openapi_tools.py  init_db.py  run_routing_eval.py  seed_demo_tools.py  sync_mcp_tools.py
tests/: test_approval_resume.py  test_approval_resume_e2e.py  test_cli_policy.py  test_cli_policy_config.py  test_config.py  test_final_demo_flow.py  test_final_demo_smoke.py  test_governance_schema.py  test_harness_status_transition.py  test_http_adapter_security.py  test_http_policy.py  test_mcp_client_adapter_sync.py  test_openapi_import_service.py  test_permission_engine.py  test_plan_only_mode.py  test_replanner_schema_recovery.py  test_result_summarizer_service.py  test_runtime_controls.py  test_sandbox_adapter.py  test_sandbox_security.py  test_schema_validation_service.py  test_secret_redaction.py  test_seed_demo_tools.py  test_step_planner.py  test_task_cancel_service.py  test_task_submit_run_config.py  test_task_submit_transaction.py  test_tool_call_replay.py  test_tool_input_normalizer.py  test_tool_rerank_service.py  test_tool_router_service.py  (+2 more)
(+82 files in other folders)
