[project]
name = "toolhub"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4",
    "docker>=7.1.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-postgres>=3.0.5",
    "openai>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    "pandas>=2.2.0",
    "redis>=5.0",
    "streamlit>=1.40.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.uv]
package = false

[tool.setuptools.packages.find]
include = ["app*"]
